# selfmd5

./: CMakeLists.txt  README.md  build-asm-c.sh  build-asm.sh  build.sh  calc-hash.c  calc-hash.sh  change-asm.sh  main-set.c  main-src.c  main-src.s  main.c  main.cpp  main.s  md5-asm.c  md5-src.c  md5-src.s  md5.S  md5.c  md5.cpp  md5.h  md5.s  selfmd5  selfmd5-test  selfmd5.h  trim-asm.sh  trim-src.c
.github/workflows/: ccpp.yml
