CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SELFMD5)
AUX_SOURCE_DIRECTORY(./ SELFMD5_SRC_LIST)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${SELFMD5_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${SELFMD5_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${SELFMD5_SRC_LIST})
SET(CMAKE_CXX_FLAGS "-Os -fdata-sections -ffunction-sections -Wl,--gc-sections")
SET(CMAKE_C_FLAGS "-Os -fdata-sections -ffunction-sections -Wl,--gc-sections")
MESSAGE("build release")
ADD_EXECUTABLE(selfmd5 ${SELFMD5_SRC_LIST})
